--- a/ALMADINA/Views/FeesRegister/DailyFeeCollection.cshtml
+++ b/ALMADINA/Views/FeesRegister/DailyFeeCollection.cshtml
@@ -6,7 +6,8 @@
 
 <div class="card shadow mb-4">
     <div class="card-header py-3">
-        <h5 class="m-0 font-weight-bold text-primary"> Daily Fee Collection Search Criteria</h5>
+        <h1 class="text-info text-center p-1 border border-dark"> Daily Fee Collection Search Criteria</h1>
+        @*<h5 class="m-0 font-weight-bold text-primary"> Daily Fee Collection Search Criteria</h5>*@
     </div>
     <div class="card-body">
         @using (Html.BeginForm())
